~ s/URI/URL/g