@@ -15,8 +15,11 @@ import org.apache.jena.graph.Node;
 import org.apache.jena.graph.NodeFactory;
 import org.apache.jena.graph.Triple;
 
-import java.net.URI;
+import java.net.MalformedURLException;
+import java.net.URL;
 import java.util.*;
+
+import static com.janeirodigital.shapetrees.core.helpers.GraphHelper.*;
 
 @NoArgsConstructor
 @Slf4j
@@ -28,40 +31,46 @@ public class HttpRemoteResourceAccessor implements ResourceAccessor {
     private static final String PATCH = "PATCH";
 
     @Override
-    public ShapeTreeResource.Fork getResource(ShapeTreeContext context, URI uri) throws ShapeTreeException {
-        log.debug("HttpRemoteResourceAccessor#getResource({})", uri);
+    public ShapeTreeResource.Fork getResource(ShapeTreeContext context, URL url) throws ShapeTreeException {
+        log.debug("HttpRemoteResourceAccessor#getResource({})", url);
         ResourceAttributes headers = new ResourceAttributes();
         headers.maybeSet(HttpHeaders.AUTHORIZATION.getValue(), context.getAuthorizationHeaderValue());
         HttpClient fetcher = AbstractHttpClientFactory.getFactory().get(false);
-        HttpRequest req = new HttpRequest("GET", uri, headers, null, null);
+        HttpRequest req = new HttpRequest("GET", url, headers, null, null);
 
         DocumentResponse response = fetcher.fetchShapeTreeResponse(req);
-        return makeAFork(uri, response);
+        return makeAFork(url, response);
     }
 
     @Override
-    public ShapeTreeResource.Fork createResource(ShapeTreeContext context, String method, URI uri, ResourceAttributes headers, String body, String contentType) throws ShapeTreeException {
-        log.debug("createResource via {}: URI [{}], headers [{}]", method, uri, headers.toString());
+    public ShapeTreeResource.Fork createResource(ShapeTreeContext context, String method, URL url, ResourceAttributes headers, String body, String contentType) throws ShapeTreeException {
+        log.debug("createResource via {}: URL [{}], headers [{}]", method, url, headers.toString());
 
         HttpClient fetcher = AbstractHttpClientFactory.getFactory().get(false);
         ResourceAttributes allHeaders = headers.maybePlus(HttpHeaders.AUTHORIZATION.getValue(), context.getAuthorizationHeaderValue());
-        DocumentResponse response = fetcher.fetchShapeTreeResponse(new HttpRequest(method, uri, allHeaders, body, contentType));
+        DocumentResponse response = fetcher.fetchShapeTreeResponse(new HttpRequest(method, url, allHeaders, body, contentType));
         if (!response.isExists()) {
-            throw new ShapeTreeException(500, "Unable to create pre-existing resource <" + uri + ">");
+            throw new ShapeTreeException(500, "Unable to create pre-existing resource <" + url + ">");
         }
-        return makeAFork(uri, response);
+        return makeAFork(url, response);
     }
 
-    protected ShapeTreeResource.Fork makeAFork(URI uri, DocumentResponse response) throws ShapeTreeException {
+    protected ShapeTreeResource.Fork makeAFork(URL url, DocumentResponse response) throws ShapeTreeException {
         Optional<String> location = response.getResourceAttributes().firstValue(HttpHeaders.LOCATION.getValue());
-        if (location.isPresent()) { uri = URI.create(location.get()); }
+        if (location.isPresent()) {
+            try {
+                url = new URL(location.get());
+            } catch (MalformedURLException e) {
+                throw new ShapeTreeException(500, "Retrieving <" + url + "> yielded a Location header \"" + location.get() + "\" which doesn't parse as a URL: " + e.getMessage());
+            }
+        }
         // this.exists = response.exists(); !!
         final boolean exists = response.getStatusCode()/100 == 2;
-        final boolean container = isContainerFromHeaders(response.getResourceAttributes(), uri);
+        final boolean container = isContainerFromHeaders(response.getResourceAttributes(), url);
         final ResourceAttributes attributes = response.getResourceAttributes();
         final ShapeTreeResourceType resourceType = getResourceTypeFromHeaders(response.getResourceAttributes());
 
-        final String name = calculateName(uri);
+        final String name = calculateName(url);
         final String body = response.getBody();
         if (response.getBody() == null) {
             log.error("Exception retrieving body string");
@@ -71,43 +80,45 @@ public class HttpRemoteResourceAccessor implements ResourceAccessor {
         ResourceAttributes parsedLinkHeaders = linkHeaders.size() == 0 // !!
                 ? new ResourceAttributes()
                 : ResourceAttributes.parseLinkHeaders(linkHeaders);
-        final Optional<URI> metadataUri = calculateMetadataURI(uri, parsedLinkHeaders);
-        final boolean metadata = calculateIsMetadata(uri, exists, parsedLinkHeaders);;
+        final Optional<URL> metadataUri = calculateMetadataURI(url, parsedLinkHeaders);
+        final boolean metadata = calculateIsMetadata(url, exists, parsedLinkHeaders);;
 
         if (Boolean.TRUE.equals(metadata)) {
             // If this implementation uses a dot notation for meta, trim it from the path
-            final String basePath = uri.getPath().replaceAll("\\.shapetree$", "");
-
             // Rebuild without the query string in case that was employed
-            final String userOwnedResourceUriString = uri.getScheme() + "://" + uri.getAuthority() + basePath;
             // @see https://github.com/xformativ/shapetrees-java/issues/86
-            final URI userOwnedResourceUri = URI.create(userOwnedResourceUriString);
+            final URL userOwnedResourceUri;
+            try {
+                userOwnedResourceUri = new URL(url, url.getPath().replaceAll("\\.shapetree$", ""));
+            } catch (MalformedURLException e) {
+                throw new ShapeTreeException(500, "can't calculate primary resource for metadata <" + url + ">");
+            }
 
             final Optional<String> contentType = attributes.firstValue(HttpHeaders.CONTENT_TYPE.getValue().toLowerCase());
-            return new ShapeTreeResource.Metadata(uri, resourceType, attributes, body, name, exists, userOwnedResourceUri);
+            return new ShapeTreeResource.Metadata(url, resourceType, attributes, body, name, exists, userOwnedResourceUri);
         } else {
-            return new ShapeTreeResource.Primary(uri, resourceType, attributes, body, name, exists, metadataUri, container);
+            return new ShapeTreeResource.Primary(url, resourceType, attributes, body, name, exists, metadataUri, container);
         }
     }
 
     @Override
-    public List<ShapeTreeResource> getContainedResources(ShapeTreeContext context, URI containerResourceURI) throws ShapeTreeException {
+    public List<ShapeTreeResource> getContainedResources(ShapeTreeContext context, URL containerResourceUrl) throws ShapeTreeException {
         try {
-            ShapeTreeResource.Fork rf = this.getResource(context, containerResourceURI);
+            ShapeTreeResource.Fork rf = this.getResource(context, containerResourceUrl);
             if (!(rf instanceof ShapeTreeResource.Primary)) {
-                throw new ShapeTreeException(500, "Cannot get contained resources for a metadata resource <" + containerResourceURI + ">");
+                throw new ShapeTreeException(500, "Cannot get contained resources for a metadata resource <" + containerResourceUrl + ">");
             }
             ShapeTreeResource.Primary containerResource = (ShapeTreeResource.Primary) rf;
 
             if (Boolean.FALSE.equals(containerResource.isContainer())) {
-                throw new ShapeTreeException(500, "Cannot get contained resources for a resource that is not a Container <" + containerResourceURI + ">");
+                throw new ShapeTreeException(500, "Cannot get contained resources for a resource that is not a Container <" + containerResourceUrl + ">");
             }
 
-            Graph containerGraph = GraphHelper.readStringIntoGraph(containerResourceURI, containerResource.getBody(), containerResource.getAttributes().firstValue(HttpHeaders.CONTENT_TYPE.getValue()).orElse(null));
+            Graph containerGraph = readStringIntoGraph(urlToUri(containerResourceUrl), containerResource.getBody(), containerResource.getAttributes().firstValue(HttpHeaders.CONTENT_TYPE.getValue()).orElse(null));
 
             if (containerGraph.isEmpty()) { return Collections.emptyList(); }
 
-            List<Triple> containerTriples = containerGraph.find(NodeFactory.createURI(containerResourceURI.toString()),
+            List<Triple> containerTriples = containerGraph.find(NodeFactory.createURI(containerResourceUrl.toString()),
                     NodeFactory.createURI(LdpVocabulary.CONTAINS),
                     Node.ANY).toList();
 
@@ -116,7 +127,7 @@ public class HttpRemoteResourceAccessor implements ResourceAccessor {
             ArrayList<ShapeTreeResource> containedResources = new ArrayList<>();
 
             for (Triple containerTriple : containerTriples) {
-                ShapeTreeResource containedResource = new ShapeTreeResource(URI.create(containerTriple.getObject().getURI()), this, context); // getResource(context,URI.create(containerTriple.getObject().getURI()));
+                ShapeTreeResource containedResource = new ShapeTreeResource(new URL(containerTriple.getObject().getURI()), this, context); // getResource(context,URL.create(containerTriple.getObject().getURL()));
                 containedResources.add(containedResource);
             }
 
@@ -128,26 +139,26 @@ public class HttpRemoteResourceAccessor implements ResourceAccessor {
 
     @Override
     public DocumentResponse updateResource(ShapeTreeContext context, String method, ShapeTreeResource.Fork updatedResource, String body) throws ShapeTreeException {
-        log.debug("updateResource: URI [{}]", updatedResource.getUri());
+        log.debug("updateResource: URL [{}]", updatedResource.getUrl());
 
         String contentType = updatedResource.getAttributes().firstValue(HttpHeaders.CONTENT_TYPE.getValue()).orElse(null);
         // [careful] updatedResource attributes may contain illegal client headers (connection, content-length, date, expect, from, host, upgrade, via, warning)
         ResourceAttributes allHeaders = updatedResource.getAttributes().maybePlus(HttpHeaders.AUTHORIZATION.getValue(), context.getAuthorizationHeaderValue());
         HttpClient fetcher = AbstractHttpClientFactory.getFactory().get(false);
-        DocumentResponse response = fetcher.fetchShapeTreeResponse(new HttpRequest(method, updatedResource.getUri(), allHeaders, body, contentType));
+        DocumentResponse response = fetcher.fetchShapeTreeResponse(new HttpRequest(method, updatedResource.getUrl(), allHeaders, body, contentType));
         return response;
     }
 
     @Override
     public DocumentResponse deleteResource(ShapeTreeContext context, ShapeTreeResource.Metadata deletedResource) throws ShapeTreeException {
-        log.debug("deleteResource: URI [{}]", deletedResource.getUri());
+        log.debug("deleteResource: URL [{}]", deletedResource.getUrl());
 
         HttpClient fetcher = AbstractHttpClientFactory.getFactory().get(false);
         ResourceAttributes allHeaders = deletedResource.getAttributes().maybePlus(HttpHeaders.AUTHORIZATION.getValue(), context.getAuthorizationHeaderValue());
-        DocumentResponse response = fetcher.fetchShapeTreeResponse(new HttpRequest("DELETE", deletedResource.getUri(), allHeaders, null, null));
+        DocumentResponse response = fetcher.fetchShapeTreeResponse(new HttpRequest("DELETE", deletedResource.getUrl(), allHeaders, null, null));
         int respCode = response.getStatusCode();
         if (respCode < 200 || respCode >= 400) {
-            log.error("Error deleting resource {}, Status {}", deletedResource.getUri(), respCode);
+            log.error("Error deleting resource {}, Status {}", deletedResource.getUrl(), respCode);
         }
         return response;
     }
@@ -157,11 +168,11 @@ public class HttpRemoteResourceAccessor implements ResourceAccessor {
      * @param headers to parse
      * @return
      */
-    public static boolean isContainerFromHeaders(ResourceAttributes headers, URI uri) {
+    public static boolean isContainerFromHeaders(ResourceAttributes headers, URL url) {
 
         List<String> linkHeaders = headers.allValues(HttpHeaders.LINK.getValue());
 
-        if (linkHeaders.size() == 0) { return uri.getPath().endsWith("/"); }
+        if (linkHeaders.size() == 0) { return url.getPath().endsWith("/"); }
 
         ResourceAttributes parsedLinkHeaders = ResourceAttributes.parseLinkHeaders(linkHeaders);
 
@@ -199,30 +210,22 @@ public class HttpRemoteResourceAccessor implements ResourceAccessor {
         return ShapeTreeResourceType.NON_RDF;
     }
 
-    static Optional<URI> calculateMetadataURI(URI uri, ResourceAttributes parsedLinkHeaders) {
+    static Optional<URL> calculateMetadataURI(URL url, ResourceAttributes parsedLinkHeaders) throws ShapeTreeException {
         final Optional<String> optLocatorString = parsedLinkHeaders.firstValue(LinkRelations.SHAPETREE_LOCATOR.getValue());
         if (optLocatorString.isEmpty()) {
-            log.info("The resource {} does not contain a link header of {}", uri, LinkRelations.SHAPETREE_LOCATOR.getValue());
+            log.info("The resource {} does not contain a link header of {}", url, LinkRelations.SHAPETREE_LOCATOR.getValue());
             return Optional.empty();
         }
         String metaDataURIString = optLocatorString.get();
-        if (metaDataURIString.startsWith("/")) {
-            // If the header value doesn't include scheme/host, prefix it with the scheme & host from container
-            URI shapeTreeContainerURI = uri;
-            String portFragment;
-            if (shapeTreeContainerURI.getPort() > 0) {
-                portFragment = ":" + shapeTreeContainerURI.getPort();
-            } else {
-                portFragment = "";
-            }
-            metaDataURIString = shapeTreeContainerURI.getScheme() + "://" + shapeTreeContainerURI.getHost() + portFragment + metaDataURIString;
+        try {
+            return Optional.of(new URL(url, metaDataURIString));
+        } catch (MalformedURLException e) {
+            throw new ShapeTreeException(500, "Malformed relative URL <" + metaDataURIString + "> (resolved from <" + url + ">)");
         }
-
-        return Optional.of(URI.create(metaDataURIString));
     }
 
-    static String calculateName(URI uri) {
-        String path = uri.getPath();
+    static String calculateName(URL url) {
+        String path = url.getPath();
 
         if (path.equals("/")) return "/";
 
@@ -242,14 +245,14 @@ public class HttpRemoteResourceAccessor implements ResourceAccessor {
     }
 
     // TODO: #86
-    static Boolean calculateIsMetadata(URI uri, boolean exists, ResourceAttributes parsedLinkHeaders) {
+    static Boolean calculateIsMetadata(URL url, boolean exists, ResourceAttributes parsedLinkHeaders) {
         // If the resource has an HTTP Link header of type of https://www.w3.org/ns/shapetrees#ShapeTreeLocator
         // with a metadata target, it is not a metadata resource (because it is pointing to one)
         if (Boolean.TRUE.equals(exists) && parsedLinkHeaders != null && parsedLinkHeaders.firstValue(LinkRelations.SHAPETREE_LOCATOR.getValue()).isPresent()) {
             return false;
         }
-        // If the resource doesn't exist, currently we need to do some inference based on the URI
-        if (uri.getPath() != null && uri.getPath().matches(".*\\.shapetree$")) { return true; }
-        return uri.getQuery() != null && uri.getQuery().matches(".*ext\\=shapetree$");
+        // If the resource doesn't exist, currently we need to do some inference based on the URL
+        if (url.getPath() != null && url.getPath().matches(".*\\.shapetree$")) { return true; }
+        return url.getQuery() != null && url.getQuery().matches(".*ext\\=shapetree$");
     }
 }
